Fixed drop shadow on Safari and removed bg transform

--- a/src/stylesheets/components/_header.sass
+++ b/src/stylesheets/components/_header.sass
@@ -7,6 +7,7 @@
     left: 0
     top: 0
     z-index: 120
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, .25))
 
     svg
       width: em-calc(214)
@@ -17,11 +18,11 @@
     z-index: 4
     right: 0
     top: 0
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, .5))
 
     svg
       height: em-calc(34)
       width: em-calc(34)
-      filter: drop-shadow(0 1px 3px rgba(0, 0, 0, .5))
 
   &__title
     margin: 0
