--- a/src/stylesheets/components/_intro.sass
+++ b/src/stylesheets/components/_intro.sass
@@ -25,6 +25,7 @@
 
   &__content
     text-align: center
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, .5))
 
     @include media(#{em-calc(640)})
       font-size: per-font(20)
