--- a/src/stylesheets/elements/_animation.sass
+++ b/src/stylesheets/elements/_animation.sass
@@ -4,6 +4,3 @@
 
   &.fade--in
     opacity: 1
-
-    .image
-      transform: scale(1)
