--- a/src/stylesheets/elements/_figure.sass
+++ b/src/stylesheets/elements/_figure.sass
@@ -4,7 +4,6 @@ img
 svg
   fill: $color-1
   max-height: 100%
-  filter: drop-shadow(0 1px 3px rgba(0, 0, 0, .25))
 
 figure
   // TODO
@@ -15,16 +14,12 @@ figure
   background-size: cover
   background-position: center top
 
-  transition: background 500ms ease-out, transform 15s ease-out
-
   height: 100%
   left: 0
   position: fixed
   width: 100%
   top: 0
   z-index: 1
-
-  transform: scale(1.2)
 
 .overlay
   background: rgba(0,0,0,0.5)
